test/commands/devops/mdsource/compare/force-apps/testCustomObject/srcmdt/objects/Common.object
<CustomObject>
    <fields>
        <fullName>Same__c</fullName>
        <label>Absolute Depth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New__c</fullName>
        <label>Absolute Depth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Changed__c</fullName>
        <label>Changed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>Same</fullName>
        <active>true</active>
        <label>Same</label>
    </recordTypes>
    <recordTypes>
        <fullName>Changed</fullName>
        <active>true</active>
        <label>Changed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Src</fullName>
        <active>true</active>
        <label>Src</label>
    </recordTypes>
</CustomObject>